Remove redundant build and fixed dark mode footer

--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -329,6 +329,7 @@ $navbar-dark-active-color:          $link-color-dark;
 
 [data-dark-mode] body .footer {
   border-top: 1px solid $border-dark;
+  background-color: $rosely8;
 }
 
 [data-dark-mode] body .docs-links,
